--- a/index.html
+++ b/index.html
@@ -11,9 +11,42 @@
        on websites and will also give them hints on how to be safe on the web."
     />
     <meta name="robots" content="index,follow" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Form Validator</title>
   </head>
   <body>
-      
+    <div class="container">
+      <form id="form" class="form" action="">
+        <h2>Register with Us</h2>
+        <div class="form-control">
+          <label for="username">Username:</label>
+          <input type="text" id="username" placeholder="Enter Username" />
+          <small>Error Messsage</small>
+        </div>
+
+        <div class="form-control">
+          <label for="Email">Email:</label>
+          <input type="email" id="username" placeholder="Enter Username" />
+          <small>Error Messsage</small>
+        </div>
+
+        <div class="form-control">
+          <label for="username">Username:</label>
+          <input type="text" id="username" placeholder="Enter Username" />
+          <small>Error Messsage</small>
+        </div>
+
+        <div class="form-control">
+          <label for="username">Username:</label>
+          <input type="text" id="username" placeholder="Enter Username" />
+          <small>Error Messsage</small>
+        </div>
+      </form>
+      <button id="button">
+          <h2>Submit</h2>
+      </button>
+    </div>
+
+    <script src="./app.js"></script>
   </body>
 </html>
