--- a/index.html
+++ b/index.html
@@ -22,25 +22,25 @@
 
         <div class="form-control">
           <label for="username">Username:</label>
-          <input type="text" id="username" placeholder="Enter Username" required />
+          <input type="text" id="username" placeholder="Enter Username"  />
           <small>Error Messsage</small>
         </div>
 
         <div class="form-control">
           <label for="Email">Email:</label>
-          <input type="text" id="email" placeholder="Enter Email" required />
+          <input type="text" id="email" placeholder="Enter Email" />
           <small>Error Messsage</small>
         </div>
 
         <div class="form-control">
           <label for="password">Password:</label>
-          <input type="password" id="password" placeholder="Enter Password" required />
+          <input type="password" id="password" placeholder="Enter Password"  />
           <small>Error Messsage</small>
         </div>
 
         <div class="form-control">
           <label for="password2">Confirm Password:</label>
-          <input type="text" id="password2" placeholder="Confirm Password" required />
+          <input type="password" id="password2" placeholder="Confirm Password" />
           <small>Error Messsage</small>
         </div>
         <button id="button">Submit</button>
